# monty-hall

./: CHANGELOG.md  README.md  monty-hall.cabal
haskell/: README.md  monty-hall.cabal
haskell/app/: Main.hs
rust/: Cargo.toml
rust/src/: main.rs
src/: MontyHall.hs
