cabal-version: 2.2
name:
  monty-hall
version:
  0.1
synopsis:
  monty hall simulation
description:
  monty hall simulation
homepage:
  https://github.com/chessai/monty-hall
bug-reports:
  https://github.com/chessai/monty-hall/issues
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai <chessai1996@gmail.com>
copyright:
  © 2019 chessai
category:
  Math, Game
build-type:
  Simple
extra-doc-files:
    README.md
  , CHANGELOG.md
tested-with:
  GHC == 8.6.5

executable monty-hall
  hs-source-dirs:
    app
  main-is:
    Main.hs
  build-depends:
    , base
    , probability
  ghc-options:
    -Wall
    -O2
  default-language:
    Haskell2010

source-repository head
  type:
    git
  location:
    https://github.com/chessai/monty-hall.git
